--- a/public/constants.scss
+++ b/public/constants.scss
@@ -18,6 +18,7 @@
     --background-white-transparent-hover: rgba(255, 255, 255, 0.8);
     --background-black-transparent: rgba(0, 0, 0, 0.5);
     --background-black-transparent-dark: rgba(0, 0, 0, 0.8);
+    --background-black: #000;
     --background-error: #ffeceb;
     --background-grad: radial-gradient(331.49% 141.42% at 0% 0%, #ced8ff 0%, #4369fc 100%);
 
@@ -74,6 +75,7 @@ html.theme_dark {
     --background-white-transparent-hover: rgba(255, 255, 255, 0.8);
     --background-black-transparent: rgba(0, 0, 0, 0.5);
     --background-black-transparent-dark: rgba(0, 0, 0, 0.8);
+    --background-black: #000;
     --background-error: #371a18;
     --background-grad: radial-gradient(331.49% 141.42% at 0% 0%, #849dff 0%, #1233b4 100%);
 
